--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hi</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Yeseva+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -22,6 +25,29 @@
         <div class="hero">
             <h1>love</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis nesciunt totam praesentium itaque? Saepe dolore rem, maxime unde quibusdam adipisci ex dolorem modi ullam repellendus laudantium, odio quo recusandae officia!</p>
+        </div>
+        <div class="love">
+            <h2>family</h2>
+            <div class="friends">
+                <figure>
+                    <img src="images.jpg" alt=''>
+                    <figcaption>dftgftyft</figcaption>
+                </figure>
+                <figure>
+                    <img src="A-kakie-u-vas-druzja-Pritcha-«RAZNYE-DRUZJa»-1.jpg" alt=''>
+                    <figcaption>dftgftyft</figcaption>
+                </figure>
+                <figure>
+                    <img src="1438.jpg">
+                    <figcaption>friends</figcaption>
+                </figure>
+                <figure>
+                    <img src="39eee751af30032eeece2f48de2de4ba_XL.jpg" alt="">
+                    <figcaption>family</figcaption>
+                </figure>
+
+            </div>
+
         </div>
     </main>
     <footer>
